--- a/static/index.html
+++ b/static/index.html
@@ -234,7 +234,7 @@
                 }
             });
 
-            const response = await fetch("https://gpa-calculator-seven-sigma.vercel.app/api/calculate", {
+            const response = await fetch("https://iiitdm-gpa-calculator.vercel.app/api/calculate", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ courses })
