--- a/static/index.html
+++ b/static/index.html
@@ -23,6 +23,7 @@
         }
     
         table {
+            width: 100%;
             border-collapse: collapse;
             table-layout: fixed;
             margin-bottom: 20px;
