--- a/static/index.html
+++ b/static/index.html
@@ -23,8 +23,8 @@
         }
     
         table {
-            width: 100%;
             border-collapse: collapse;
+            width: 100%;
             table-layout: fixed;
             margin-bottom: 20px;
             background-color: var(--table-bg);
@@ -34,7 +34,9 @@
         }
     
         th, td {
-            padding: 9px;
+            padding: 15px;
+            padding-left: 0px;
+            padding-right: 0px;
             text-align: center;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -63,7 +65,7 @@
             background-color: var(--button-bg);
             color: var(--text-color);
             border: none;
-            padding: 10px 15px;
+            padding: 10px 12px;
             cursor: pointer;
             transition: background-color 0.3s ease;
             border-radius: 18px;
