--- a/static/index.html
+++ b/static/index.html
@@ -276,7 +276,7 @@
                 }
             });
 
-            const response = await fetch("http://localhost:3000/api/main", {
+            const response = await fetch("https://iiitdm-gpa-calculator.vercel.app/api/calculate", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ courses })
