--- a/static/index.html
+++ b/static/index.html
@@ -99,6 +99,10 @@
             background-color: var(--button-hover-bg);
             color: var(--text-color)
         }
+        
+        p{
+            padding: 16 px;
+        }
     </style>    
 </head>
 <body>
