--- a/static/index.html
+++ b/static/index.html
@@ -102,6 +102,8 @@
         
         p{
             padding: 16 px;
+            margin-top: 1em;
+            margin-bottom: 1em;
         }
     </style>    
 </head>
