--- a/static/index.html
+++ b/static/index.html
@@ -107,7 +107,7 @@
     </style>    
 </head>
 <body>
-    <h1>IIITDM Kancheepuram - GPA Calculator</h1>
+    <h1 style="padding: 10px">IIITDM Kancheepuram - GPA Calculator</h1>
     <p id="gpa-result"></p>
     <table id="courses-table">
         <thead>
