--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
             --input-bg: #272727;
             --button-bg: #3e3e3e;
             --button-hover-bg: #575757;
-            --highlight-color: #009879;
+            --highlight-color: #6c0cfe;
         }
     
         body {
